--- a/public_html/sites/all/themes/ringstedtheme/scss/partials/_search.scss
+++ b/public_html/sites/all/themes/ringstedtheme/scss/partials/_search.scss
@@ -78,3 +78,8 @@
 .chosen-container .chosen-choices li.search-choice {
   padding: 0.3em 1em 0.3em 1em !important;
 }
+
+.page-search-events .search-categories .field-item {
+  padding: 0 !important;
+  word-break: none !important;
+}
